--- a/html/css/me.css
+++ b/html/css/me.css
@@ -50,6 +50,7 @@ input.input100 {
     width: 100%;
     padding: 0px 20px;
     border-radius: 24px;
+    background-color: #fff;
 }
 
 .input-icon {
