--- a/web/css/me.css
+++ b/web/css/me.css
@@ -12,7 +12,7 @@
     padding-left: 25px;
     padding-bottom: 10px;
     display: block;
-    color: #088dcd;
+    color: #b71c1c;
 }
 .insee-color {
     background-color: #b71c1c;
