--- a/web/css/style.css
+++ b/web/css/style.css
@@ -252,7 +252,7 @@ section {
 }
 
 .pattern:before {
-    background: #088dcd url("../images/dot-pattern.png") repeat scroll 0 0;
+    background: #b71c1c url("../images/dot-pattern.png") repeat scroll 0 0;
     opacity: 0.45;
 }
 
@@ -261,7 +261,7 @@ section {
 }
 
 .bluesh:before {
-    background: #088dcd;
+    background: #b71c1c;
 }
 
 .exthigh-opacity:before {
@@ -876,7 +876,7 @@ header.sticky {
 }
 
 .timeline-info .admin-name > h5 {
-    color: #088dcd;
+    color: #b71c1c;
     display: inline-block;
     font-size: 20px;
     font-weight: 500;
@@ -2931,7 +2931,7 @@ li.google {
 }
 
 .g-map::before {
-    background: #088dcd none repeat scroll 0 0;
+    background: #b71c1c none repeat scroll 0 0;
     content: "";
     height: 100%;
     left: 0;
@@ -2949,7 +2949,7 @@ li.google {
 }
 
 .map-meta {
-    background: #088dcd none repeat scroll 0 0;
+    background: #b71c1c none repeat scroll 0 0;
     color: #fff;
     left: 10%;
     padding: 20px;
@@ -6765,7 +6765,7 @@ a.reply {
 }
 
 .menu-container {
-    background-color: #088dcd;
+    background-color: #b71c1c;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     -ms-border-radius: 100%;
