--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -1,5 +1,6 @@
 .contact100-form-btn {
     background-color: #b71c1c;
+    font-size: medium;
 }
 
 .contact100-form-title {
@@ -67,12 +68,21 @@ input.input100 {
     text-align: center;
 }
 
-.regiser form {
-    padding-top: 30%;
+::-webkit-input-placeholder {
+    font-size: medium !important;
+    letter-spacing: 1.2px;
+    text-align: left;
+    font-weight: 100;
+
 }
 
-.regiser form #sdt {
+.regiser .form #sdt {
     height: 48px;
+}
+
+
+.regiser .wrap-input100  {
+    margin-top: 40%;
 }
 
 .regiser .container-contact100-form-btn {
@@ -111,6 +121,7 @@ input.input100 {
     font-size: 35px;
     font-weight: 600;
     padding: 0 15px;
+    text-align: center;
 }
 
 .otp .form-center {
@@ -126,8 +137,8 @@ input.input100 {
 
 .otp .contact30-form-btn {
     width: 40%;
-    font-size: 10px;
-    height: 30px;
+    font-size: medium;
+    height: 45px;
     margin: 10px;
 }
 
@@ -147,9 +158,20 @@ input.input100 {
 
 .register_step3  .wrap-input50 {
     width: calc((100% - 10px)/3);
-
+    width: calc((100% - 15px)/3);
+    margin-right: 5px;
 }
 
 .grecaptcha-badge {
     display: none;
 }
+
+#btn-register-phone {
+    font-size: medium;
+}
+
+.error-msg {
+    color: red;
+    font-size: small;
+}
+
