--- a/web/css/color.css
+++ b/web/css/color.css
@@ -85,7 +85,7 @@ blockquote,
 .job-detail > ul li i,
 .company-intro > a
 {
-	color: #088dcd;	
+	color: #b71c1c;	
 }
 svg{
 stroke: #fff;
@@ -148,11 +148,11 @@ button.submit-checkout,
 a.addnewforum,
 .apply-bttons > a
 {
-	background: #088dcd;
+	background: #b71c1c;
 }
 
 .stroke-solid {
-	fill: #088dcd;
+	fill: #b71c1c;
 }
 
 
@@ -170,16 +170,16 @@ a.addnewforum,
 a.btn2:hover,
 .single-btn > li > a.active
 {
-	border-color: #088dcd;	
+	border-color: #b71c1c;	
 }
 
 #nprogress .spinner-icon{
-	border-left-color: #088dcd;
+	border-left-color: #b71c1c;
 }
 #nprogress .spinner-icon
 {
-	border-top-color: #088dcd;		
+	border-top-color: #b71c1c;		
 }
 .timeline-info > ul li a:after{
-	border-bottom-color: #088dcd;
+	border-bottom-color: #b71c1c;
 }
