--- a/insee-promotion-client/public/index.ejs
+++ b/insee-promotion-client/public/index.ejs
@@ -8,8 +8,8 @@
     <title>insee-promotion-client</title>
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
     <script  src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
-    <script>eruda.init();</script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script> -->
+    <!-- <script>eruda.init();</script> -->
 </head>
 
 <body>
