--- a/insee-promotion-client/app/resources/css/mobile/main.css
+++ b/insee-promotion-client/app/resources/css/mobile/main.css
@@ -160,7 +160,7 @@ iframe {
 
 .container-contact100 {
   width: 100%;  
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
