--- a/insee-promotion-client/app/resources/webapp/css/responsive.css
+++ b/insee-promotion-client/app/resources/webapp/css/responsive.css
@@ -331,7 +331,7 @@
 
 @media screen and (max-width: 980px) {
     .gap {
-        padding: 40px 0;
+        padding: 3px 0;
     }
     p {
         font-size: 14px;
@@ -1173,7 +1173,7 @@
         margin-top: 15px;
         width: 35%;
         margin-bottom: 12px;
-        border-radius: 100%;
+        /* border-radius: 100%; */
     }
     footer .widget-title h4::before {
         width: 10%;
@@ -1181,7 +1181,7 @@
 
     .timeline-info {
         height: 100%;
-        padding-left: 20px;
+        /* padding-left: 20px; */
     }
 
     .user-avatar {
