--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -58,8 +58,6 @@ input.input100 {
 @media (max-width: 576px) {
     .contact100-form {
         padding: 25px 15px 0px 15px;
-        height: calc(100vh - 86px);
-        min-height: initial;
     }
 }
 
@@ -111,6 +109,21 @@ input.input100 {
 
 .wrap-input25 input {
     height: 48px;
+    padding: 0 !important;
+    text-align: center;
+    font-size: large;
+    text-align: center;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .otp .input100 {
@@ -120,9 +133,12 @@ input.input100 {
     text-align: center;
 }
 
-.otp .form-center {
+.form-center {
     text-align: center;
     padding: 30px;
+}
+.center {
+    text-align: center;
 }
 
 .btn-default {
@@ -294,13 +310,12 @@ input.input100 {
 }
 
 .form-container {
-    margin-top: 30%;
+    margin-top: 10%;
     margin-bottom: 80px;
 }
 
 .footer-desc {
-    /* position: fixed; */
-    bottom: 50px;
+    height: 50px;
     text-align: center;
     background-color: #fff;
     display: block;
