--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -85,3 +85,128 @@
     margin-bottom: 20px;
     text-align: right;
 }
+
+.popup-wraper3 {
+    background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99999;
+    -webkit-opacity: 0;
+    -moz-opacity: 0;
+    -ms-opacity: 0;
+    -o-opacity: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.25s linear 0s;
+    
+}
+
+.popup-wraper3.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup {
+    background: #fff none repeat scroll 0 0;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    left: 50%;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 650px;
+}
+
+.popup-closed {
+    cursor: pointer;
+    font-size: 15px;
+    position: absolute;
+    right: 18px;
+    top: 15px;
+    z-index: 9;
+}
+
+.popup-meta {
+    display: inline-block;
+    width: 100%;
+}
+
+.popup-head {
+    border-bottom: 1px solid #dedede;
+    display: inline-block;
+    padding-bottom: 10px;
+    width: 100%;
+    color: #757a95;
+    font-size: 14px;
+    letter-spacing: 0.2px;
+    font-weight: 600;
+}
+
+.popup-head > h5 {
+    color: #515365;
+    display: inline-block;
+    font-size: medium;
+    font-weight: 600;
+    margin-bottom: 0;
+    width: 100%;
+}
+
+.Rpt-meta span {
+    margin: 10px 0px;
+    display: block;
+}
+
+
+.popup label {
+    font-size: 15px;
+    margin-bottom: 10px;
+    margin-top: 16px;
+    text-transform: capitalize;
+    width: 100%;
+    color: #515365;
+    font-weight: 500;
+    display: inline-block;
+}
+
+.popup textarea {
+    margin-bottom: 30px;
+    width: 100%;
+    background: #edf2f6 none repeat scroll 0 0;
+    border-radius: 4px;
+    font-size: 13px;
+    padding: 14px 15px;
+    color: #535165;
+    border: 1px solid #e4e4e4;
+}
+
+.popup .btn-bar {
+    text-align: right;
+}
+
+.popup .btn-bar > a {
+    margin-right: 20px;
+}
+
+.popup .btn-bar a {
+    font-size: large;
+    color: white;
+    cursor: pointer;
+}
+
+.add-butn.cancel {
+    background-color: #535165;
+} 
+.open-modal {
+    overflow-y: hidden;
+}
