--- a/insee-promotion-client/app/resources/css/mobile/font-awesome.css
+++ b/insee-promotion-client/app/resources/css/mobile/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('https://trungndpc.github.io/insee-promotion-client/fonts/fontawesome-webfont.eot?v=4.7.0');
-  src: url('https://trungndpc.github.io/insee-promotion-client/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://trungndpc.github.io/insee-promotion-client/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://trungndpc.github.io/insee-promotion-client/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://trungndpc.github.io/insee-promotion-client/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://trungndpc.github.io/insee-promotion-client/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/fonts/fontawesome-webfont.eot?v=4.7.0');
+  src: url('https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
