--- a/insee-promotion-client/public/index.ejs
+++ b/insee-promotion-client/public/index.ejs
@@ -8,6 +8,7 @@
     <title>insee-promotion-client</title>
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
     <script  src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script> -->
     <!-- <script>eruda.init();</script> -->
 </head>
