--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -396,7 +396,7 @@ input[type=number] {
     width: 100%;
     border-radius: 5px;
     background-color: #fff;
-    border: 1px solid #e6e6e6;
+    border: 1px solid #e6e6e6 !important;
     padding-left: 20px;
 }
 
@@ -578,4 +578,90 @@ body {
     top: 0;
     left: 0;
     opacity: 0.8;
+}
+
+.location-input {
+    width: 100%;
+    display: block;
+}
+
+.location-input-city {
+    width: calc((60% - 5px));
+    height: 45px;
+    margin: 0px;
+    display: inline-block;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+}
+
+.location-input-district {
+    width: calc((40% - 5px));
+    height: 45px;
+    margin: 0px;
+    display: inline-block;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+}
+
+.location-input-city select {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    font-size: small;
+    padding-left: 20px;
+}
+
+.location-input-district select {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    font-size: small;
+    padding-left: 20px;
+}
+
+.owner-input {
+    width: 100%;
+    display: block;
+}
+
+.owner-input-name {
+    width: calc((60% - 5px));
+    height: 45px;
+    margin: 0px;
+    display: inline-block;
+    /* border: 1px solid #e6e6e6; */
+    border-radius: 5px;
+}
+
+.owner-input-phone {
+    width: calc((40% - 5px));
+    height: 45px;
+    margin: 0px;
+    display: inline-block;
+    /* border: 1px solid #e6e6e6; */
+    border-radius: 5px;
+}
+
+.owner-input-name input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    font-size: small;
+    padding-left: 20px;
+}
+
+.owner-input-phone input {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    font-size: small;
+    padding-left: 20px;
+}
+
+.react-datepicker-wrapper {
+    width: 100%;
 }
