--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -665,3 +665,16 @@ body {
 .react-datepicker-wrapper {
     width: 100%;
 }
+
+.img-container {
+    width: 100%;
+    position: relative;
+}
+
+.img-container .img-icon {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 5px;
+    top: 2px;
+}
