--- a/insee-promotion-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-client/app/resources/webapp/css/me.css
@@ -26,3 +26,45 @@
 .friend-name {
     padding-left: 0;
 }
+
+@media screen and (max-width: 640px) {
+    /* .central-meta {
+        padding: 14px;
+    } */
+}
+
+.img-view-container {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: rgb(0 0 0 / 0.9);
+}
+
+.img-view-container table {
+    width: 100%;
+    height: 100%;
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.img-view-container td {
+    vertical-align: middle;
+    text-align: center;
+}
+
+.img-view-container td {
+    height: auto;
+    max-width: 90%;
+}
+
+.img-view-container .btn-close {
+    font-size: xx-large;
+    color: #fff;
+    position: absolute;
+    right: 21px;
+    top: 1px;
+    cursor: pointer;
+}
