--- a/insee-promotion-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-client/app/resources/webapp/css/me.css
@@ -68,3 +68,25 @@
     top: 1px;
     cursor: pointer;
 }
+
+.f-title.bill {
+    padding: 10px 0;
+    margin: 0;
+}
+
+.photos li {
+    position: relative;
+}
+
+.photos li .status {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+    text-align: center;
+    padding-top: 22%;
+    color: #fff;
+    font-weight: 600;
+}
