--- a/insee-promotion-client/app/resources/webapp/css/style.css
+++ b/insee-promotion-client/app/resources/webapp/css/style.css
@@ -5691,7 +5691,7 @@ canvas {
 .post-title {
     border-bottom: 1px solid #e0e0e0;
     display: inline-block;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     padding-bottom: 15px;
     width: 100%;
 }
