--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -75,6 +75,9 @@
 
 .pepl-info img {
     border-radius: 100%;
+    width: 60px;
+    height: 60px;
+    max-width: inherit !important;
 }
 
 .action-customer-detail li {
@@ -253,4 +256,78 @@
     right: 21px;
     top: 1px;
     cursor: pointer;
+}
+
+
+.photos li {
+    position: relative;
+}
+
+.photos li .status {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+    text-align: center;
+    padding-top: 22%;
+    color: #fff;
+    font-weight: 600;
+}
+
+
+.ctkm li {
+    float: right !important;
+}
+
+.ctkm li span.mbtn {
+    padding: 5px 20px;
+    background-color: #dc3545;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.ck.ck-editor {
+    width: 100% !important;
+}
+
+.ctk-editor-lable {
+    width: 14%;
+}
+
+.ctk-editor-input {
+    border: 1px solid #eee;
+    font-size: 14px;
+    padding: 10px 20px;
+    width: 86%;
+}
+
+.ctk-row {
+    padding: 20px 0px;
+}
+
+.nav-construction {
+    background-color: #fff;
+    padding: 13px;
+    padding-left: 5px;
+}
+
+.inbox-lists .item-left {
+    font-size: 20px;
+    padding: 10px;
+}
+
+.inbox-lists .item-left label {
+    font-size: medium;
+    color: black !important;
+}
+
+.inbox-lists .item-right {
+    float: right;
+}
+
+.item-left.active label {
+    color: #b71c1c !important;
 }
