--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -294,14 +294,15 @@
 }
 
 .ctk-editor-lable {
-    width: 14%;
+    width: 20%;
 }
 
 .ctk-editor-input {
     border: 1px solid #eee;
     font-size: 14px;
     padding: 10px 20px;
-    width: 86%;
+    width: 80%;
+    background-color: #fff;
 }
 
 .ctk-row {
@@ -334,4 +335,86 @@
 
 .photos > li a img {
     height: 120px;
+}
+
+.about.construction .input-extra {
+    padding: 0.75rem;
+}
+
+.about.construction .input-extra .th {
+    width: 20%;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.about.construction .input-extra .td {
+    width: 20%;
+    display: inline-block;
+}
+
+.input-lable{
+    display: block !important;
+    float: right;
+    text-transform: uppercase;
+    color: #6b6b6b;
+    font-weight: 600;
+    border: 1px dashed #bbbbbb;
+    text-align: right;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+}
+
+.errorMsg-right{
+    text-align: right;
+    color: red;
+    font-size: unset;
+}
+
+.friend-group .change-photo {
+    border: 1px dashed #cecece;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding: 0 20px;
+}
+
+.change-photo > figure {
+    display: inline-block;
+    margin: 0;
+    float: left;
+    width: auto;
+    margin-top: 13px;
+}
+
+.change-photo > figure img {
+    border: 3px solid #ccc;
+    border-radius: 100%;
+    width: 80px;
+    height: 80px;
+}
+
+.change-photo .edit-img {
+    display: inline-block;
+    padding: 25px 10px;
+}
+.change-photo .edit-img p {
+    margin: 0;
+}
+
+.modal-input {
+    background: #edf2f6;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    width: 100%;
+    font-size: 13px;
+}
+
+.container-btn {
+    text-align: right;
+}
+
+.pading0 {
+    padding: 0;
 }
