--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -424,3 +424,13 @@
     font-style: italic;
     font-weight: 600;
 }
+
+.form button {
+    border: medium none;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 500;
+    padding: 4px 20px;
+    border-radius: 4px;
+    background-color: #b71c1c;
+}
