--- a/insee-promotion-admin-client/public/index.ejs
+++ b/insee-promotion-admin-client/public/index.ejs
@@ -8,6 +8,7 @@
     <title>insee-promotion-client</title>
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
     <script  src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
+    <script src="https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/ckeditor.js"></script>
 </head>
 
 <body>
