--- a/insee-promotion-client/app/resources/webapp/css/style.css
+++ b/insee-promotion-client/app/resources/webapp/css/style.css
@@ -5690,7 +5690,7 @@ canvas {
 }
 
 .post-title {
-    border-bottom: 1px solid #e0e0e0;
+    /* border-bottom: 1px solid #e0e0e0 !important; */
     display: inline-block;
     /* margin-bottom: 15px; */
     padding-bottom: 15px;
