--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -694,3 +694,81 @@ body {
 .m-content.post {
     padding: 20px 15px;
 }
+
+.cm-title {
+    text-align: center;
+}
+
+.cm-title h3 {
+    font-size: xx-large;
+    color: red;
+    font-weight: 600;
+}
+
+.cm-desc {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.cm-desc p {
+    padding: 0;
+    margin: 0;
+    color: black;
+    font-size: medium;
+}
+
+.cm-content {
+    text-align: center;
+    margin-top: 70px;
+}
+
+.cm-content p {
+    color: black;
+    font-size: medium;
+}
+
+.cm-note  {
+    text-align: center;
+    color: black;
+    font-size: medium;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 60px;
+}
+
+.cm-note p {
+    color: black;
+    font-size: small;
+    margin: 0;
+    line-height: 15px;
+}
+
+.cards {
+    text-align: center;
+    padding-top: 40px;
+}
+
+.cards .card-item {
+    width: 80%;
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 12px;
+    margin-bottom: 5px;
+}
+
+.cards .card-item img {
+    height: 70px;
+    float: left;
+}
+
+.cards .card-item ul {
+    padding-top: 13px;
+}
+
+.cards .card-item ul li{
+    font-size: medium;
+}
+
+.idam {
+    font-weight: 600;
+}
