--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -303,7 +303,14 @@
     padding: 10px 20px;
     width: 80%;
     background-color: #fff;
+    display: inline-block;
 }
+
+.ctk-editor-input.c1 {
+    border: none;
+    padding: 0;
+}
+
 
 .ctk-row {
     padding: 20px 0px;
@@ -444,4 +451,44 @@
 
 .nearby-contct.post {
     margin-top: 10px;
+}
+
+.paging-container {
+    padding: 10px;
+    text-align: center;
+}
+
+.no-post {
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.img-container {
+    width: 100%;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+}
+
+.img-container .img-icon {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 5px;
+    top: 2px;
+}
+
+.img-container .preview-img-item {
+    text-align: center;
+    height: 300px;
+}
+
+.img-container .select-change {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
