--- a/insee-promotion-admin-client/public/index.ejs
+++ b/insee-promotion-admin-client/public/index.ejs
@@ -9,6 +9,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
     <script  src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
     <script src="https://insee-promotion-vn.s3.us-east-2.amazonaws.com/static/ckeditor.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.821.0.min.js"></script>
+
 </head>
 
 <body>
