--- a/insee-promotion-client/public/index.ejs
+++ b/insee-promotion-client/public/index.ejs
@@ -10,11 +10,17 @@
     <script  src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.821.0.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <script src="https://sp.zalo.me/plugins/sdk.js"></script>
     <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script> -->
     <!-- <script>eruda.init();</script> -->
 </head>
 
 <body>
+    <script>
+        window.register = {
+            step : 1
+        }
+    </script>
     <div id="insee-promotion-client"></div>
 </body>
 
