--- a/insee-promotion-client/public/index.ejs
+++ b/insee-promotion-client/public/index.ejs
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <title>insee-promotion-client</title>
-    <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
-    <script  src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.821.0.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="https://sp.zalo.me/plugins/sdk.js"></script>
-    <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script> -->
-    <!-- <script>eruda.init();</script> -->
 </head>
 
 <body>
     <script>
         window.register = {
-            step : 1
+            step: 1
         }
     </script>
     <div id="insee-promotion-client"></div>
+    <script>
+        function load(doc, tag, link) {
+            var el = doc.getElementsByTagName(tag)[0];
+            var script = doc.createElement(tag);
+            script.async = 1;
+            script.src = link;
+            el.parentNode.insertBefore(script, el)
+        }
+        load(document, 'script', '//gstatic.com/firebasejs/8.1.2/firebase-app.js');
+        load(document, 'script', '//gstatic.com/firebasejs/8.1.2/firebase-auth.js');
+        load(document, 'script', '//sdk.amazonaws.com/js/aws-sdk-2.821.0.min.js');
+    </script>
 </body>
 
 
