--- a/insee-promotion-client/app/resources/css/mobile/font-awesome.css
+++ b/insee-promotion-client/app/resources/css/mobile/font-awesome.css
@@ -6,11 +6,11 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('https://ktl6lowkv2obj.vcdn.cloud/static/fonts/fontawesome-webfont.eot?v=4.7.0');
-  src: url('https://ktl6lowkv2obj.vcdn.cloud/static/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://ktl6lowkv2obj.vcdn.cloud/static/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://ktl6lowkv2obj.vcdn.cloud/static/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://ktl6lowkv2obj.vcdn.cloud/static/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://ktl6lowkv2obj.vcdn.cloud/static/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('https://insee-client.wash-up.vn/static/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://insee-client.wash-up.vn/static/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://insee-client.wash-up.vn/static/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://insee-client.wash-up.vn/static/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://insee-client.wash-up.vn/static/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
+
 .fa {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
