--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -842,3 +842,30 @@ body {
     transform: translateY(0);
     -webkit-transform: translateY(0);
 }
+
+.say-thank {
+    color: #333333;
+    font-size: 28px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.desc-sthk {
+    text-align: center;
+    font-size: medium;
+    margin-top: 15px;
+}
+
+.icon-sthk {
+    text-align: center;
+    margin-top: 30px;
+}
+.red {
+    color: #da0000;
+    font-weight: 500;
+}
+
+.green {
+    color: #217346;
+    font-weight: 500;
+}
