--- a/insee-promotion-admin-client/app/resources/webapp/css/me.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/me.css
@@ -493,3 +493,25 @@
     height: 50px;
     cursor: pointer;
 }
+
+.x_panel.sum ul {
+    text-align: center;
+    list-style: outside none none;
+    margin: 0;
+    padding: 0;
+}
+
+.x_panel.sum ul li {
+    color: #232323;
+    font-size: 25px;
+    font-weight: 600;
+    padding: 15px 20px 13px;
+    text-align: center;
+    display: inline-block;
+}
+.x_panel.sum ul li span {
+    color: #969696;
+    display: list-item;
+    font-size: 15px;
+    margin-top: 2px;
+}
