--- a/insee-promotion-client/app/resources/css/mobile/font-awesome.css
+++ b/insee-promotion-client/app/resources/css/mobile/font-awesome.css
@@ -6,7 +6,7 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('https://nhathau.insee.com.vn/static/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://nhathau.insee.com.vn/static/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://nhathau.insee.com.vn/static/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://nhathau.insee.com.vn/static/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://nhathau.insee.com.vn/static/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('../../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
