--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -276,6 +276,7 @@ input[type=number] {
     font-weight: 300;
     color: #929497;
 }
+
 .input-shell input::-moz-placeholder { /* Firefox 19+ */
     font-size: small !important;
     color: #929497;
@@ -871,4 +872,69 @@ body {
 .err-slsp {
     color: red;
     font-size: small;
+}
+
+.input-refferal-code {
+    border: 1px solid #D0D2D3;
+    margin: 60px 0px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    height: 45px;
+    position: relative;
+}
+
+.input-refferal-code input {
+    width: 100%;
+    height: 43px;
+    line-height: 45px;
+    border-radius: 10px;
+    padding-left: 30px;
+    font-size: large;
+    font-weight: bold;
+    letter-spacing: 3px;
+}
+
+.input-refferal-code input {
+    padding: 0px 10px !important;
+    text-align: center;
+}
+
+.input-refferal-code input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    text-align: center !important;
+    font-size: medium !important;
+    color: #929497;
+    letter-spacing: 0.5px !important;
+    font-weight: 300;
+}
+
+.input-refferal-code input::-moz-placeholder { /* Firefox 19+ */
+    text-align: center !important;
+    font-size: medium !important;
+    color: #929497;
+    letter-spacing: 0.5px !important;
+    font-weight: 300;
+}
+.input-refferal-code input:-ms-input-placeholder { /* IE 10+ */
+    text-align: center !important;
+    font-size: medium !important;
+    color: #929497;
+    letter-spacing: 0.5px !important;
+    font-weight: 300;
+}
+.input-refferal-code input:-moz-placeholder { /* Firefox 18- */
+    text-align: center !important;
+    font-size: medium !important;
+    color: #929497;
+    letter-spacing: 0.5px !important;
+    font-weight: 300;
+}
+
+.btn-skip {
+    margin-right: 0 !important;
+    margin-left: 10px;
+}
+
+.form-referral {
+    margin-left: calc((20% - 15px) / 2);
+    margin-right: calc((20% - 15px) / 2);
 }
