--- a/insee-promotion-admin-client/app/resources/webapp/css/style.css
+++ b/insee-promotion-admin-client/app/resources/webapp/css/style.css
@@ -10184,3 +10184,55 @@ aside.sidebar.full-style {
     transform: scale(1);
     visibility: visible;
 }
+
+
+.nearby-contct.posts li {
+    padding: 0;
+}
+
+.nearby-contct.posts .pdtop {
+    padding-top: 10px;
+    padding-bottom: 15px;
+
+}
+
+.nearby-contct.posts .cover {
+    margin: 0;
+}
+
+.nearby-contct.posts .cover img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    border: none
+}
+.nearby-contct.posts li h4 {
+    font-size: 15px;
+}
+
+.nearby-contct.posts li ul li {
+    padding: 0 20px;
+    padding-left: 0;
+}
+
+.post-btn {
+    display: block;
+    width: 77px;
+    display: block;
+    margin: auto;
+    margin-top: 5px;
+}
+
+.icon-edit {
+    cursor: pointer;
+}
+
+.icon-edit-save {
+    margin-left: 15px;
+    color: #40a9ff;
+    font-size: 20px;
+}
+
+.ctkm > ul > li {
+    margin: 0;
+}
