--- a/insee-promotion-client/app/resources/css/mobile/me.css
+++ b/insee-promotion-client/app/resources/css/mobile/me.css
@@ -703,12 +703,15 @@ body {
 
 .cm-content {
     text-align: center;
-    margin-top: 70px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .cm-content p {
     color: #545454;
     font-size: medium;
+    line-height: 18px;
+    margin-bottom: 27px;
 }
 
 .cm-note  {
